[package]
name = "claude-mux"
version = "0.1.0"
edition = "2024"
description = "tmux + git worktree + Claude CLI parallel execution manager"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
